<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ui.menu.MenuActivity">

    <TextView
        android:id="@+id/tv_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_menu_title"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <ImageView
        android:id="@+id/iv_menu_vs_robot"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_vs_robot"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_menu_vs_human"
        app:layout_constraintTop_toBottomOf="@id/tv_menu_title" />

    <TextView
        android:id="@+id/tv_menu_vs_robot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/iv_menu_vs_robot"
        app:layout_constraintRight_toRightOf="@id/iv_menu_vs_robot"
        app:layout_constraintTop_toBottomOf="@id/iv_menu_vs_robot"
        android:text="@string/text_menu_vs_robot" />

    <ImageView
        android:id="@+id/iv_menu_vs_human"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_vs_human"
        app:layout_constraintLeft_toRightOf="@id/iv_menu_vs_robot"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_menu_title" />

    <TextView
        android:id="@+id/tv_menu_vs_human"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/iv_menu_vs_human"
        app:layout_constraintRight_toRightOf="@id/iv_menu_vs_human"
        app:layout_constraintTop_toBottomOf="@id/iv_menu_vs_human"
        android:text="@string/text_menu_vs_human" />

</androidx.constraintlayout.widget.ConstraintLayout>