<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green"
    tools:context=".ui.intro.NameFormFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/et_name_player"
        app:layout_constraintBottom_toTopOf="@id/et_name_player"
        android:text="@string/text_name_you"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/et_name_player_two"
        app:layout_constraintBottom_toTopOf="@id/et_name_player_two"
        android:text="@string/text_name_friend"/>

    <EditText
        android:id="@+id/et_name_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_32sdp"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_title"
        tools:text="test" />

    <EditText
        android:id="@+id/et_name_player_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginRight="@dimen/_32sdp"
        android:maxLines="1"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name_player"
        tools:text="test" />

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        android:text="@string/text_name_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        app:layout_constraintLeft_toLeftOf="@id/tv_name_title"
        app:layout_constraintRight_toRightOf="@id/tv_name_title"
        app:layout_constraintBottom_toTopOf="@id/tv_name_title"
        android:layout_marginBottom="24dp"
        android:src="@drawable/ic_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>